--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -23,18 +23,43 @@
         android:paddingStart="@dimen/poster_thumb_width"
         android:paddingTop="@dimen/activity_margin_half">
 
-        <TextView
-            android:id="@+id/movie_year"
-            style="@style/TextAppearance.AppCompat.Caption"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="end"
             android:layout_marginLeft="@dimen/activity_margin_content"
             android:layout_marginStart="@dimen/activity_margin_content"
-            android:alpha="0.38"
-            android:gravity="end"
-            android:maxLines="1"
-            android:textStyle="bold"
-            tools:text="2009 | EN"/>
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/rating_image"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:scaleType="centerCrop"
+                android:src="@drawable/star"
+                android:tint="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/movie_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                tools:text="5.0" />
+            <TextView
+                android:id="@+id/movie_year"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_margin_content"
+                android:layout_marginStart="@dimen/activity_margin_content"
+                android:alpha="0.38"
+                android:gravity="end"
+                android:maxLines="1"
+                android:textStyle="bold"
+                tools:text="2009 | EN"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/movie_title"
